<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/showOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textAlignment="textEnd"
            android:textSize="80sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxEms="7"/>

        <TextView
            android:id="@+id/tvInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="#FFF"
            android:textSize="80sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxEms="9"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="245dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button_AC"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/button_AC"
                android:textColor="#000"
                android:textSize="40sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_arrow"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/button_arrow"
                android:textColor="#000"
                android:textSize="40sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_percent"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/button_percent"
                android:textColor="#000"
                android:textSize="40sp"
                app:backgroundTint="@null" />


            <CheckBox
                android:id="@+id/button_division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_divison"
                android:padding="0dp"
                android:button="@null"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/circle3"
                android:text="@string/button_7"
                android:textSize="40sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_8"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/circle3"
                android:text="@string/button_8"
                android:textSize="40sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_9"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/circle3"
                android:text="@string/button_9"
                android:textSize="40sp"
                app:backgroundTint="@null" />


            <CheckBox
                android:id="@+id/button_multiplied"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_multi"
                android:button="@null"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/circle3"
                android:text="@string/button_4"
                android:textSize="40sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_5"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/circle3"
                android:text="@string/button_5"
                android:textSize="40sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_6"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/circle3"
                android:text="@string/button_6"
                android:textSize="40sp"
                app:backgroundTint="@null" />

            <CheckBox
                android:id="@+id/button_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_minus"
                android:button="@null"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/circle3"
                android:text="@string/button_1"
                android:textSize="40sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_2"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/circle3"
                android:text="@string/button_2"
                android:textSize="40sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_3"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/circle3"
                android:text="@string/button_3"
                android:textSize="40sp"
                app:backgroundTint="@null" />

            <CheckBox
                android:id="@+id/button_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_plus"
                android:button="@null"/>/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_0"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="2"
                android:background="@drawable/circle3"
                android:text="@string/button_0"
                android:textSize="40sp"
                app:backgroundTint="@null"
                style="?android:attr/buttonStyle" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@drawable/circle3"
                android:text="@string/button_dot"
                android:textSize="40sp"
                app:backgroundTint="@null"
                style="?android:attr/buttonStyle" />

            <Button
                android:id="@+id/button_equal"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@drawable/circle2"
                android:textColor="@drawable/textcolor"
                android:checkable="true"
                android:text="@string/button_equal"
                android:textSize="40sp"
                app:backgroundTint="@null" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>